mapページ試作追加

--- a/map.html
+++ b/map.html
@@ -25,17 +25,37 @@
         </div>
       </header>
       <main>
-        <div id="map"></div>
+        <div id="map"></div>  
       </main>
       <footer class="footer">
+        
+        <div class="linkCamera">
+          <a class="linkCamera__btn"  href="./camera.html">記念撮影する</a></div>
         <div class="footer__frame">
-          <a href=""></a>
-          <a href=""></a>
+          <a class="aBtn" href="./main.html">
+            <div>
+              <p>Top</p>
+            </div>
+          </a>
+          <a class="aBtn" href="./map.html">
+            <div>
+              <p>Map</p>
+            </div>
+          </a>
         </div>
       </footer>
     </div>
   </div>
-  <!--JS-->
+  <!--GoogleMapAPI-->
+  <script>
+    (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
+      key: "AIzaSyDLCgjgoPSpozEb_F88BM6jMcqfj4zkV5E",
+      v: "weekly"
+    });
+  </script>
+  <!-- JS -->
+  <script src="./assets/js/map.js"></script>
+
 </body>
 
 </html>
