--- a/camera.html
+++ b/camera.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>デジタルスタンプラリー Camera</title>
+  <title>デジタルスタンプラリー カメラ</title>
+  <link rel="icon" href="./assets/img/favicon.ico">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/camera.css">
+
 </head>
+
 <body>
-  
+  <div class="camera__header">
+  </div>
+  <video id="video"></video>
+  <div class="camera__footer">
+  </div>
+
 </body>
+
 </html>
