--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
     <div class="spFrame">
       <header class="header">
         <div class="header__frame">
-          <h1></h1>
+          <h1><img src="./assets/img/logo01.png" alt="東北ずん子"></h1>
           <div class="humburger">
             <span></span>
             <span></span>
@@ -25,19 +25,20 @@
         </div>
       </header>
       <main>
-        <div id="map"></div>  
+        <div id="map"></div>
       </main>
       <footer class="footer">
-        
+
         <div class="linkCamera">
-          <a class="linkCamera__btn"  href="./camera.html">記念撮影する</a></div>
+          <a class="linkCamera__btn" href="./camera.html">記念撮影する</a>
+        </div>
         <div class="footer__frame">
-          <a class="aBtn" href="./main.html">
+          <a id="mainBtn" class="aBtn" href="./main.html">
             <div>
               <p>Top</p>
             </div>
           </a>
-          <a class="aBtn" href="./map.html">
+          <a id="mapBtn" class="aBtn" href="./map.html">
             <div>
               <p>Map</p>
             </div>
@@ -55,6 +56,7 @@
   </script>
   <!-- JS -->
   <script src="./assets/js/map.js"></script>
+  <script src="./assets/js/footer.js"></script>
 
 </body>
 
