--- a/camera.html
+++ b/camera.html
@@ -7,17 +7,34 @@
   <title>デジタルスタンプラリー カメラ</title>
   <link rel="icon" href="./assets/img/favicon.ico">
   <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/common.css">
   <link rel="stylesheet" href="./assets/css/camera.css">
+
 
 </head>
 
 <body>
-  <div class="camera__header">
+  <div class="frame">
+    <div class="spFrame">
+      <div class="postProcess">
+        <img id="photograph" >
+      </div>
+      <div class="camera__header">
+      </div>
+      <video id="video"></video>
+      <div id="canvasFrame">
+        <canvas id="canvas"></canvas>
+      </div>
+      <div class="camera__footer">
+        <div class="camera__btnArea">
+          <a class="back" href="./map.html"><span></span></a>
+          <div id="photo"><div></div></div>
+          <div id="switchBtn"><img src="./assets/img/switch.svg" alt="icon"></div>
+        </div>
+      </div>
+    </div>
   </div>
-  <video id="video"></video>
-  <div class="camera__footer">
-  </div>
-
+  <script src="./assets/js/camera.js"></script>
 </body>
 
 </html>
