--- a/camera.html
+++ b/camera.html
@@ -17,7 +17,14 @@
   <div class="frame">
     <div class="spFrame">
       <div class="postProcess">
-        <img id="photograph" >
+        <div class="backFrame">
+          <div class="back backCamera"><span></span></div>
+        </div>
+        <img id="photograph">
+        <div>
+          <a id="download">画像を保存</a>
+          <a class="quite" href="./map.html">Mapに戻る</a>
+        </div>
       </div>
       <div class="camera__header">
       </div>
@@ -28,7 +35,9 @@
       <div class="camera__footer">
         <div class="camera__btnArea">
           <a class="back" href="./map.html"><span></span></a>
-          <div id="photo"><div></div></div>
+          <div id="photo">
+            <div></div>
+          </div>
           <div id="switchBtn"><img src="./assets/img/switch.svg" alt="icon"></div>
         </div>
       </div>
