--- a/camera.html
+++ b/camera.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>デジタルスタンプラリー カメラ</title>
-  <link rel="icon" href="./assets/img/favicon.ico">
+  <title>東北ずん子と記念写真 カメラ</title>
+  <link rel="icon" href="./assets/img/favi.ico">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/common.css">
   <link rel="stylesheet" href="./assets/css/camera.css">
