--- a/camera.html
+++ b/camera.html
@@ -29,9 +29,9 @@
       <div class="camera__header">
       </div>
       <video id="video"></video>
-      <div id="canvasFrame">
-        <canvas id="canvas"></canvas>
-      </div>
+      <canvas id="photoFrame"><img src="./assets/img/zunko1.png" alt="東北ずん子"></canvas>
+      <canvas id="canvas"></canvas>
+      <canvas id="synthesis"></canvas>
       <div class="camera__footer">
         <div class="camera__btnArea">
           <a class="back" href="./map.html"><span></span></a>
