--- a/map.html
+++ b/map.html
@@ -15,14 +15,7 @@
   <div class="frame">
     <div class="spFrame">
       <header class="header">
-        <div class="header__frame">
           <h1><img src="./assets/img/logo01.png" alt="東北ずん子"></h1>
-          <div class="humburger">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
       </header>
       <main>
         <div id="map"></div>
@@ -33,7 +26,7 @@
           <a class="linkCamera__btn" href="./camera.html">記念撮影する</a>
         </div>
         <div class="footer__frame">
-          <a id="mainBtn" class="aBtn" href="./main.html">
+          <a id="mainBtn" class="aBtn" href="./index.html">
               <p>Top</p>
           </a>
           <a id="mapBtn" class="aBtn" href="./map.html">
